# Octopus

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  langgraph_rag_system.py  pyproject.toml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  render.yaml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  citations.py  conversations.py  papers.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  citation.py  conversation.py  paper.py  user.py
backend/app/schemas/: __init__.py  conversation.py  paper.py  user.py
backend/app/services/: academic_prompts.py  citation_extractor.py  doi_lookup.py  pdf_processor.py  rag_service.py  vector_store.py
frontend/: .env.example  README.md  index.html  package.json  tailwind.config.js  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx
frontend/src/pages/: Dashboard.tsx  Login.tsx  Papers.tsx  Register.tsx
frontend/src/store/: auth.ts  chat.ts
frontend/src/types/: index.ts
