[project]
name = "scholarchat"
version = "0.1.0"
description = "Academic Research RAG Assistant - Literature review helper for PhD students"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # LangChain & RAG
    "chromadb>=1.3.4",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    # FastAPI Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    # PDF Processing
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
    # Utilities
    "python-dotenv>=1.0.0",
    "mypy>=1.18.2",
    # Optional
    "jupyter>=1.1.1",
    "pillow>=12.0.0",
]

[project.scripts]
scholarchat = "backend.app.main:app"
